优化item service的初始化代码